src/scss/index.scss
@use "reuse/Variables.scss";

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');

body {
  margin: 0;
  font-family: 'Lato', sans-serif;
  background-color: Variables.$surfaceColor;
  color: Variables.$onSurfaceColor;
}

#root {
  min-height: 100vh;
}

